--- a/index.html
+++ b/index.html
@@ -2,36 +2,20 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Gully Inspection Map (Local Save)</title>
+  <title>Gully Inspection Map</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://unpkg.com/togeojson"></script>
   <style>
-    html, body { height: 100%; margin: 0; font-family: Arial, sans-serif; }
+    html, body { margin: 0; height: 100%; font-family: Arial, sans-serif; }
     #map { height: 100%; }
     #controlPanel {
-      position: absolute;
-      bottom: 10px;
-      left: 10px;
-      background: white;
-      padding: 10px;
-      border-radius: 6px;
+      position: absolute; bottom: 10px; left: 10px;
+      background: white; padding: 10px;
+      border-radius: 6px; z-index: 999;
       box-shadow: 0 0 4px rgba(0,0,0,0.3);
-      z-index: 999;
     }
-    #summary {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      background: white;
-      padding: 10px;
-      border-radius: 6px;
-      font-size: 0.9em;
-      box-shadow: 0 0 4px rgba(0,0,0,0.3);
-      z-index: 999;
-    }
-    .dot { width: 14px; height: 14px; border-radius: 50%; border: 1px solid #000; }
   </style>
 </head>
 <body>
@@ -40,206 +24,137 @@
     <input type="file" id="importFile" accept=".kml">
     <button onclick="exportData()">Export CSV</button>
   </div>
-  <div id="summary">
-    <b>Summary</b><br>
-    <div id="summaryContent"></div>
-    <label>Filter:</label>
-    <select id="filterStatus" onchange="filterByStatus()">
-      <option value="All">All</option>
-      <option value="Clear">Clear</option>
-      <option value="Broken">Broken</option>
-      <option value="Remediation">Remediation</option>
-    </select>
-  </div>
 
   <script>
     const map = L.map('map').setView([51.9, -8.5], 13);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
     const gullyData = [];
-    const summaryCounts = { Clear: 0, Broken: 0, Remediation: 0 };
-    const storageKey = 'gully_inspections';
+    const localKey = 'gully_data';
 
     function createDot(color) {
       return L.divIcon({
         className: '',
-        html: `<div class='dot' style='background:${color}'></div>`
+        html: `<div style='width:14px;height:14px;border-radius:50%;background:${color};border:1px solid black'></div>`
       });
     }
 
-    function updateSummary() {
-      const total = gullyData.length;
-      document.getElementById("summaryContent").innerHTML = `
-        Total: ${total}<br>
-        Clear: ${summaryCounts.Clear}<br>
-        Broken: ${summaryCounts.Broken}<br>
-        Remediation: ${summaryCounts.Remediation}<br>
-      `;
-    }
-
-    function filterByStatus() {
-      const selected = document.getElementById("filterStatus").value;
-      gullyData.forEach(({ marker, status }) => {
-        if (selected === 'All' || status === selected) {
-          marker.addTo(map);
-        } else {
-          map.removeLayer(marker);
-        }
-      });
-    }
-
-    function saveToLocalStorage() {
-      const simplified = gullyData.map(({ marker, dataLog }) => ({
+    function saveToLocal() {
+      const toSave = gullyData.map(({ marker, dataLog }) => ({
         latlng: marker.getLatLng(),
         dataLog
       }));
-      localStorage.setItem(storageKey, JSON.stringify(simplified));
+      localStorage.setItem(localKey, JSON.stringify(toSave));
     }
 
-    function loadFromLocalStorage() {
-      const saved = localStorage.getItem(storageKey);
-      if (!saved) return;
-      JSON.parse(saved).forEach(entry => {
-        const marker = L.marker(entry.latlng, { icon: createDot('gray') }).addTo(map);
-        const dataLog = entry.dataLog || [];
-        let lastStatus = 'Unmarked';
-
-        if (dataLog.length > 0) {
-          const last = dataLog[dataLog.length - 1];
-          const ageMs = Date.now() - new Date(last.date).getTime();
-          const ageMonths = ageMs / (1000 * 60 * 60 * 24 * 30.5);
-          if (last.status === 'Clear') {
-            lastStatus = ageMonths > 12 ? 'Expired' : ageMonths > 6 ? 'Aged' : 'Clear';
-          } else {
-            lastStatus = last.status;
-          }
-          const color = lastStatus === 'Clear' ? 'blue'
-                      : lastStatus === 'Aged' ? 'green'
-                      : lastStatus === 'Expired' ? 'gray'
-                      : lastStatus === 'Broken' ? 'orange'
-                      : lastStatus === 'Remediation' ? 'red'
-                      : 'gray';
-          marker.setIcon(createDot(color));
-          marker.bindTooltip(`${last.status} (${last.date})`);
-        }
-
-        marker.on('click', () => showPopup(marker, entry.latlng, dataLog));
-        gullyData.push({ marker, dataLog, status: lastStatus });
+    function exportData() {
+      let csv = 'Latitude,Longitude,Date,Status,Note\n';
+      gullyData.forEach(({ dataLog }) => {
+        dataLog.forEach(d =>
+          csv += `${d.lat},${d.lng},${d.date},${d.status},"${d.note.replace(/"/g, '""')}"\n`);
       });
-      updateSummary();
+      const blob = new Blob([csv], { type: 'text/csv' });
+      const a = document.createElement('a');
+      a.href = URL.createObjectURL(blob);
+      a.download = 'gully_data.csv';
+      a.click();
     }
 
-    function showPopup(marker, latlng, dataLog) {
+    function popupFor(marker, latlng, dataLog) {
       const popup = document.createElement('div');
-
-      const checkbox = document.createElement('input');
-      checkbox.type = 'checkbox';
+      const tick = document.createElement('input');
+      tick.type = 'checkbox';
       popup.appendChild(document.createTextNode(' Inspection complete: '));
-      popup.appendChild(checkbox); popup.appendChild(document.createElement('br'));
+      popup.appendChild(tick); popup.appendChild(document.createElement('br'));
 
-      const dateInput = document.createElement('input');
-      dateInput.type = 'date';
-      const today = new Date().toISOString().split('T')[0];
-      dateInput.value = today;
-      dateInput.max = today;
-      dateInput.disabled = true;
+      const date = document.createElement('input');
+      date.type = 'date';
+      date.value = new Date().toISOString().split('T')[0];
+      date.disabled = true;
       popup.appendChild(document.createTextNode(' Date: '));
-      popup.appendChild(dateInput); popup.appendChild(document.createElement('br'));
+      popup.appendChild(date); popup.appendChild(document.createElement('br'));
 
       const note = document.createElement('textarea');
       note.disabled = true;
       popup.appendChild(document.createTextNode(' Comment: '));
       popup.appendChild(note); popup.appendChild(document.createElement('br'));
 
-      const dropdown = document.createElement('select');
-      ['Blocked', 'Clear', 'Remediation', 'Replacement', 'Broken'].forEach(opt => {
-        const option = document.createElement('option');
-        option.value = opt;
-        option.innerText = opt;
-        dropdown.appendChild(option);
+      const drop = document.createElement('select');
+      ['Blocked', 'Clear', 'Remediation', 'Replacement', 'Broken'].forEach(v => {
+        const o = document.createElement('option');
+        o.value = v; o.text = v;
+        drop.appendChild(o);
       });
-      dropdown.disabled = true;
+      drop.disabled = true;
       popup.appendChild(document.createTextNode(' Status: '));
-      popup.appendChild(dropdown); popup.appendChild(document.createElement('br'));
+      popup.appendChild(drop); popup.appendChild(document.createElement('br'));
 
-      checkbox.onchange = () => {
-        const enable = checkbox.checked;
-        dateInput.disabled = !enable;
-        dropdown.disabled = !enable;
-        note.disabled = !enable;
+      tick.onchange = () => {
+        const enabled = tick.checked;
+        date.disabled = !enabled;
+        drop.disabled = !enabled;
+        note.disabled = !enabled;
       };
 
-      const saveBtn = document.createElement('button');
-      saveBtn.innerText = 'Save';
-      saveBtn.onclick = () => {
-        if (!checkbox.checked) return alert('Tick inspection complete');
-        const status = dropdown.value;
-        const date = dateInput.value;
-        const comment = note.value;
-        if (!date) return alert('Date required');
-        const ageMs = Date.now() - new Date(date).getTime();
-        const ageMonths = ageMs / (1000 * 60 * 60 * 24 * 30.5);
-
-        let iconColor = 'gray';
-        if (status === 'Clear') iconColor = ageMonths > 12 ? 'gray' : ageMonths > 6 ? 'green' : 'blue';
-        else if (status === 'Broken') iconColor = 'orange';
-        else if (status === 'Remediation') iconColor = 'red';
-        else if (status === 'Blocked') iconColor = 'orange';
-
-        marker.setIcon(createDot(iconColor));
-        marker.bindTooltip(`${status} (${date})`);
-        dataLog.push({ lat: latlng.lat, lng: latlng.lng, date, status, comment });
-        saveToLocalStorage();
+      const save = document.createElement('button');
+      save.innerText = 'Save';
+      save.onclick = () => {
+        if (!tick.checked) return alert('Tick inspection complete');
+        const val = drop.value;
+        const dat = date.value;
+        const msg = note.value;
+        const age = (Date.now() - new Date(dat)) / (1000 * 60 * 60 * 24 * 30.5);
+        let color = val === 'Clear'
+            ? age > 12 ? 'gray' : age > 6 ? 'green' : 'blue'
+            : val === 'Broken' ? 'orange'
+            : val === 'Remediation' ? 'red'
+            : val === 'Blocked' ? 'orange'
+            : 'gray';
+        marker.setIcon(createDot(color));
+        dataLog.push({ lat: latlng.lat, lng: latlng.lng, date: dat, status: val, note: msg });
+        saveToLocal();
         marker.closePopup();
       };
-      popup.appendChild(saveBtn);
+      popup.appendChild(save);
 
-      const logBtn = document.createElement('button');
-      logBtn.innerText = 'View Log';
-      logBtn.onclick = () => {
-        alert(dataLog.map(d => `${d.date}: ${d.status} - ${d.comment}`).join('\n') || 'No entries');
+      const log = document.createElement('button');
+      log.innerText = 'View Log';
+      log.onclick = () => {
+        alert(dataLog.map(d => `${d.date}: ${d.status} - ${d.note}`).join('\n') || 'No log');
       };
-      popup.appendChild(logBtn);
+      popup.appendChild(log);
 
       marker.bindPopup(popup).openPopup();
     }
 
-    document.getElementById('importFile').addEventListener('change', e => {
-      const file = e.target.files[0];
-      const reader = new FileReader();
-      reader.onload = () => {
-        const kml = new DOMParser().parseFromString(reader.result, 'text/xml');
-        const geojson = toGeoJSON.kml(kml);
-        geojson.features.forEach(f => {
-          if (f.geometry.type === 'Point') {
-            const [lng, lat] = f.geometry.coordinates;
-            const latlng = { lat, lng };
-            const marker = L.marker(latlng, { icon: createDot('gray') }).addTo(map);
-            const dataLog = [];
-            marker.on('click', () => showPopup(marker, latlng, dataLog));
-            gullyData.push({ marker, dataLog, status: 'Unmarked' });
-          }
-        });
-        updateSummary();
-      };
-      reader.readAsText(file);
-    });
-
-    function exportData() {
-      let csv = 'Latitude,Longitude,Date,Status,Comment\n';
-      gullyData.forEach(({ dataLog }) => {
-        dataLog.forEach(d =>
-          csv += `${d.lat},${d.lng},${d.date},${d.status},"${d.comment.replace(/"/g, '""')}"\n`);
-      });
-      const blob = new Blob([csv], { type: 'text/csv' });
-      const link = document.createElement('a');
-      link.href = URL.createObjectURL(blob);
-      link.download = 'gully_inspections.csv';
-      link.click();
+    function addMarker(latlng, logs=[]) {
+      const marker = L.marker(latlng, { icon: createDot('gray') }).addTo(map);
+      marker.on('click', () => popupFor(marker, latlng, logs));
+      gullyData.push({ marker, dataLog: logs });
     }
 
-    // Load saved data
-    loadFromLocalStorage();
+    document.getElementById('importFile').addEventListener('change', e => {
+      const reader = new FileReader();
+      reader.onload = () => {
+        const xml = new DOMParser().parseFromString(reader.result, 'text/xml');
+        const json = toGeoJSON.kml(xml);
+        json.features.forEach(f => {
+          if (f.geometry.type === 'Point') {
+            const [lng, lat] = f.geometry.coordinates;
+            addMarker({ lat, lng });
+          }
+        });
+      };
+      reader.readAsText(e.target.files[0]);
+    });
+
+    function loadLocal() {
+      const saved = localStorage.getItem(localKey);
+      if (!saved) return;
+      JSON.parse(saved).forEach(({ latlng, dataLog }) => addMarker(latlng, dataLog));
+    }
+
+    loadLocal();
   </script>
 </body>
 </html>
