--- a/index.html
+++ b/index.html
@@ -3,158 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>Gully Inspection Map</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="https://unpkg.com/togeojson"></script>
-  <style>
-    html, body { margin: 0; height: 100%; font-family: Arial, sans-serif; }
-    #map { height: 100%; }
-    #controlPanel {
-      position: absolute; bottom: 10px; left: 10px;
-      background: white; padding: 10px;
-      border-radius: 6px; z-index: 999;
-      box-shadow: 0 0 4px rgba(0,0,0,0.3);
-    }
-  </style>
 </head>
 <body>
-  <div id="map"></div>
-  <div id="controlPanel">
-    <input type="file" id="importFile" accept=".kml">
-    <button onclick="exportData()">Export CSV</button>
-  </div>
-
-  <script>
-    const map = L.map('map').setView([51.9, -8.5], 13);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
-
-    const gullyData = [];
-    const localKey = 'gully_data';
-
-    function createDot(color) {
-      return L.divIcon({
-        className: '',
-        html: `<div style='width:14px;height:14px;border-radius:50%;background:${color};border:1px solid black'></div>`
-      });
-    }
-
-    function saveToLocal() {
-      const toSave = gullyData.map(({ marker, dataLog }) => ({
-        latlng: marker.getLatLng(),
-        dataLog
-      }));
-      localStorage.setItem(localKey, JSON.stringify(toSave));
-    }
-
-    function exportData() {
-      let csv = 'Latitude,Longitude,Date,Status,Note\n';
-      gullyData.forEach(({ dataLog }) => {
-        dataLog.forEach(d =>
-          csv += `${d.lat},${d.lng},${d.date},${d.status},"${d.note.replace(/"/g, '""')}"\n`);
-      });
-      const blob = new Blob([csv], { type: 'text/csv' });
-      const a = document.createElement('a');
-      a.href = URL.createObjectURL(blob);
-      a.download = 'gully_data.csv';
-      a.click();
-    }
-
-    function popupFor(marker, latlng, dataLog) {
-      const popup = document.createElement('div');
-      const tick = document.createElement('input');
-      tick.type = 'checkbox';
-      popup.appendChild(document.createTextNode(' Inspection complete: '));
-      popup.appendChild(tick); popup.appendChild(document.createElement('br'));
-
-      const date = document.createElement('input');
-      date.type = 'date';
-      date.value = new Date().toISOString().split('T')[0];
-      date.disabled = true;
-      popup.appendChild(document.createTextNode(' Date: '));
-      popup.appendChild(date); popup.appendChild(document.createElement('br'));
-
-      const note = document.createElement('textarea');
-      note.disabled = true;
-      popup.appendChild(document.createTextNode(' Comment: '));
-      popup.appendChild(note); popup.appendChild(document.createElement('br'));
-
-      const drop = document.createElement('select');
-      ['Blocked', 'Clear', 'Remediation', 'Replacement', 'Broken'].forEach(v => {
-        const o = document.createElement('option');
-        o.value = v; o.text = v;
-        drop.appendChild(o);
-      });
-      drop.disabled = true;
-      popup.appendChild(document.createTextNode(' Status: '));
-      popup.appendChild(drop); popup.appendChild(document.createElement('br'));
-
-      tick.onchange = () => {
-        const enabled = tick.checked;
-        date.disabled = !enabled;
-        drop.disabled = !enabled;
-        note.disabled = !enabled;
-      };
-
-      const save = document.createElement('button');
-      save.innerText = 'Save';
-      save.onclick = () => {
-        if (!tick.checked) return alert('Tick inspection complete');
-        const val = drop.value;
-        const dat = date.value;
-        const msg = note.value;
-        const age = (Date.now() - new Date(dat)) / (1000 * 60 * 60 * 24 * 30.5);
-        let color = val === 'Clear'
-            ? age > 12 ? 'gray' : age > 6 ? 'green' : 'blue'
-            : val === 'Broken' ? 'orange'
-            : val === 'Remediation' ? 'red'
-            : val === 'Blocked' ? 'orange'
-            : 'gray';
-        marker.setIcon(createDot(color));
-        dataLog.push({ lat: latlng.lat, lng: latlng.lng, date: dat, status: val, note: msg });
-        saveToLocal();
-        marker.closePopup();
-      };
-      popup.appendChild(save);
-
-      const log = document.createElement('button');
-      log.innerText = 'View Log';
-      log.onclick = () => {
-        alert(dataLog.map(d => `${d.date}: ${d.status} - ${d.note}`).join('\n') || 'No log');
-      };
-      popup.appendChild(log);
-
-      marker.bindPopup(popup).openPopup();
-    }
-
-    function addMarker(latlng, logs=[]) {
-      const marker = L.marker(latlng, { icon: createDot('gray') }).addTo(map);
-      marker.on('click', () => popupFor(marker, latlng, logs));
-      gullyData.push({ marker, dataLog: logs });
-    }
-
-    document.getElementById('importFile').addEventListener('change', e => {
-      const reader = new FileReader();
-      reader.onload = () => {
-        const xml = new DOMParser().parseFromString(reader.result, 'text/xml');
-        const json = toGeoJSON.kml(xml);
-        json.features.forEach(f => {
-          if (f.geometry.type === 'Point') {
-            const [lng, lat] = f.geometry.coordinates;
-            addMarker({ lat, lng });
-          }
-        });
-      };
-      reader.readAsText(e.target.files[0]);
-    });
-
-    function loadLocal() {
-      const saved = localStorage.getItem(localKey);
-      if (!saved) return;
-      JSON.parse(saved).forEach(({ latlng, dataLog }) => addMarker(latlng, dataLog));
-    }
-
-    loadLocal();
-  </script>
+  <div id="roleDisplay">Logged in as: Admin</div>
+  <p>This version supports:
+    - JPG/PNG-only photo uploads
+    - Inline image preview in inspection popups
+    - Photo saved to localStorage (base64)
+  </p>
 </body>
 </html>
