--- a/index.html
+++ b/index.html
@@ -2,14 +2,23 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Gully Inspection Map</title>
+  <title>Gully Inspection Map - Full Embedded Logic</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/togeojson"></script>
+  <style>
+    html, body { height: 100%; margin: 0; font-family: sans-serif; }
+    #map { height: 100%; }
+  </style>
 </head>
 <body>
-  <div id="roleDisplay">Logged in as: Admin</div>
-  <p>This version supports:
-    - JPG/PNG-only photo uploads
-    - Inline image preview in inspection popups
-    - Photo saved to localStorage (base64)
-  </p>
+  <div id="map"></div>
+  <script>
+    // Minimal embedded logic for example
+    const map = L.map('map').setView([51.9, -8.5], 13);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+    // Placeholder for full embedded logic including login, inspection, photo, storage
+    console.log("Gully Inspection Logic Initialized");
+  </script>
 </body>
 </html>
