--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@ function logout() {
   </style>
 </head>
 <body>
+
+<script>
+window.onload = function () {
+  document.getElementById("map").style.display = 'none';
+  document.getElementById("controlPanel").style.display = 'none';
+  document.getElementById("summary").style.display = 'none';
+};
+</script>
+
 <div id="loginScreen">
   <div id="loginBox">
     <h2>Login</h2>
@@ -53,6 +62,9 @@ function logout() {
 <div id="logoutPanel" style="position:absolute;bottom:10px;right:10px;z-index:1000;">
   <button onclick="logout()" style="padding:5px 10px;">Logout</button>
 </div>
+
+
+<div id="userStatus" style="position:absolute;top:10px;right:10px;z-index:1001;color:#333;font-size:0.9em;"></div>
 
 <div id="map"></div>
 <div id="controlPanel">
@@ -80,10 +92,13 @@ const summaryCounts = { Clear: 0, Broken: 0, Remediation: 0 };
 const storageKey = 'gully_inspections';
 
 function login() {
+  document.getElementById("loginError").innerText = "";
+
   const user = document.getElementById("username").value.trim().toLowerCase();
   const pass = document.getElementById("password").value;
   if (credentials[user] && credentials[user] === pass) {
     currentRole = user;
+    document.getElementById("userStatus").innerText = "Logged in as: " + user;
     document.getElementById("loginScreen").style.display = 'none';
     document.getElementById("map").style.display = 'block';
     document.getElementById("controlPanel").style.display = 'block';
@@ -205,6 +220,15 @@ function showPopup(marker, latlng, dataLog) {
   popup.appendChild(document.createTextNode(' Status: '));
   popup.appendChild(dropdown); popup.appendChild(document.createElement('br'));
 
+  const photoInput = document.createElement('input');
+  photoInput.type = 'file';
+  photoInput.accept = 'image/*';
+  photoInput.capture = 'environment';
+  popup.appendChild(document.createTextNode(' Take Photo: '));
+  popup.appendChild(photoInput);
+  popup.appendChild(document.createElement('br'));
+
+
   const editable = (currentRole === 'admin' || currentRole === 'operator');
   const adminOnly = (currentRole === 'admin');
 
@@ -230,6 +254,38 @@ function showPopup(marker, latlng, dataLog) {
     const status = dropdown.value;
     const date = dateInput.value;
     const comment = note.value;
+    const photoFile = photoInput.files[0];
+    if (!date) return alert('Date required');
+
+    const reader = new FileReader();
+    reader.onload = function () {
+      const photoData = reader.result || "";
+      const ageMs = Date.now() - new Date(date).getTime();
+      const ageMonths = ageMs / (1000 * 60 * 60 * 24 * 30.5);
+
+      let iconColor = 'gray';
+      if (status === 'Clear') iconColor = ageMonths > 12 ? 'gray' : ageMonths > 6 ? 'green' : 'blue';
+      else if (status === 'Broken') iconColor = 'orange';
+      else if (status === 'Remediation') iconColor = 'red';
+      else if (status === 'Blocked') iconColor = 'orange';
+
+      marker.setIcon(createDot(iconColor));
+      marker.bindTooltip(`${status} (${date})`);
+      dataLog.push({ lat: latlng.lat, lng: latlng.lng, date, status, comment, photo: photoData });
+      saveToLocalStorage();
+      marker.closePopup();
+    };
+    if (photoFile) {
+      reader.readAsDataURL(photoFile);
+    } else {
+      reader.onload();
+    }
+    return;
+
+    if (!checkbox.checked) return alert('Tick inspection complete');
+    const status = dropdown.value;
+    const date = dateInput.value;
+    const comment = note.value;
     if (!date) return alert('Date required');
     const ageMs = Date.now() - new Date(date).getTime();
     const ageMonths = ageMs / (1000 * 60 * 60 * 24 * 30.5);
@@ -242,9 +298,22 @@ function showPopup(marker, latlng, dataLog) {
 
     marker.setIcon(createDot(iconColor));
     marker.bindTooltip(`${status} (${date})`);
-    dataLog.push({ lat: latlng.lat, lng: latlng.lng, date, status, comment });
-    saveToLocalStorage();
-    marker.closePopup();
+    
+    const photoFile = photoInput.files[0];
+    const reader = new FileReader();
+    reader.onload = function () {
+      const photoData = reader.result || "";
+      dataLog.push({ lat: latlng.lat, lng: latlng.lng, date, status, comment, photo: photoData });
+      saveToLocalStorage();
+      marker.closePopup();
+    };
+    if (photoFile) {
+      reader.readAsDataURL(photoFile);
+    } else {
+      reader.onload();
+    }
+    return;
+
   };
   popup.appendChild(saveBtn);
 
