--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@ function logout() {
     <option value="Clear">Clear</option>
     <option value="Broken">Broken</option>
     <option value="Remediation">Remediation</option>
-  </select>
+    <option value="Replacement">Replacement</option>
+</select>
 </div>
 
 <script>
@@ -76,7 +77,7 @@ let currentRole = null;
 let map;
 const credentials = { admin: 'admin123', operator: 'operator123', viewer: 'viewer123' };
 const gullyData = [];
-const summaryCounts = { Clear: 0, Broken: 0, Remediation: 0 };
+const summaryCounts = { Clear: 0, Broken: 0, Remediation: 0 , Replacement: 0};
 const storageKey = 'gully_inspections';
 
 function login() {
@@ -170,6 +171,7 @@ function loadFromLocalStorage() {
       marker.bindTooltip(`${last.status} (${last.date})`);
     }
     marker.on('click', () => showPopup(marker, entry.latlng, dataLog));
+    if (summaryCounts[lastStatus] !== undefined) summaryCounts[lastStatus]++;
     gullyData.push({ marker, dataLog, status: lastStatus });
   });
   updateSummary();
