--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@ function logout() {
   </style>
 </head>
 <body>
+
+<script>
+window.onload = function () {
+  document.getElementById("map").style.display = 'none';
+  document.getElementById("controlPanel").style.display = 'none';
+  document.getElementById("summary").style.display = 'none';
+};
+</script>
+
 <div id="loginScreen">
   <div id="loginBox">
     <h2>Login</h2>
