--- a/index.html
+++ b/index.html
@@ -50,14 +50,11 @@ function logout() {
 </div>
 
 
-<div id="logoutPanel" style="position:absolute;top:10px;left:10px;z-index:1000;">
-  <button onclick="logout()" style="padding:5px 10px;">Logout</button>
-</div>
-
 <div id="map"></div>
 <div id="controlPanel">
-  <input type="file" id="importFile" accept=".kml">
+  <label for="importFile" style="margin-right:10px;">Import File:</label><input type="file" id="importFile" accept=".kml">
   <button onclick="exportData()">Export CSV</button>
+  <button onclick="logout()" style="margin-left:10px;padding:5px 10px;">Logout</button>
 </div>
 <div id="summary">
   <b>Summary</b><br>
@@ -75,6 +72,7 @@ function logout() {
 <script>
 let currentRole = null;
 let map;
+const importedFiles = new Set();
 const credentials = { admin: 'admin123', operator: 'operator123', viewer: 'viewer123' };
 const gullyData = [];
 const summaryCounts = { Clear: 0, Broken: 0, Remediation: 0 , Replacement: 0};
@@ -94,6 +92,12 @@ function login() {
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
     document.getElementById('importFile').addEventListener('change', e => {
+      const file = e.target.files[0];
+      if (importedFiles.has(file.name)) {
+        alert("This file has already been imported.");
+        return;
+      }
+      importedFiles.add(file.name);
       const file = e.target.files[0];
       const reader = new FileReader();
       reader.onload = () => {
