--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ function toggleLegend() {
 </div>
 
 
-<div style="position:absolute;bottom:10px;left:10px;z-index:999;">
+<div style="position:absolute;top:10px;right:10px;z-index:999;">
   <button onclick="toggleLegend()" style="padding:4px 8px;margin-bottom:4px;">🗺️ Legend</button>
   <div id="legendPanel" style="background:white;padding:10px;border-radius:6px;box-shadow:0 0 4px rgba(0,0,0,0.3);font-size:0.85em;">
     <b>Legend</b><br>
